[gd_scene load_steps=16 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://icons/icon_question_mark.svg" type="Texture" id=2]
[ext_resource path="res://views/editor/common/icon_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://icons/icon_material_preview_light_2.svg" type="Texture" id=4]
[ext_resource path="res://views/editor/camera.gd" type="Script" id=5]
[ext_resource path="res://views/editor/runtime_tree.gd" type="Script" id=6]
[ext_resource path="res://views/auto_scale.gd" type="Script" id=7]
[ext_resource path="res://icons/icon_material_preview_light_1.svg" type="Texture" id=8]
[ext_resource path="res://views/editor/draw_axis.gd" type="Script" id=9]
[ext_resource path="res://icons/icon_camera.svg" type="Texture" id=10]
[ext_resource path="res://views/editor/viewport/viewport.gd" type="Script" id=11]
[ext_resource path="res://views/editor/viewport/gizmos/move_gizmo.tscn" type="PackedScene" id=12]
[ext_resource path="res://views/editor/viewport/gizmos_manager.gd" type="Script" id=13]

[sub_resource type="World" id=1]
environment = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.117647, 0.117647, 0.117647, 0.784314 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HSplitContainer" type="HSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/autohide = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="Tree" parent="."]
margin_right = 443.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
input = NodePath("../ViewportContainer/Viewport/Input")
output = NodePath("../ViewportContainer/Viewport/Output")

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = 467.0
margin_right = 1366.0
margin_bottom = 768.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
stretch = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
input_root = NodePath("Viewport/Input")
output_root = NodePath("Viewport/Output")
camera_root = NodePath("Viewport/Pivot")
static_light = NodePath("Viewport/Lighting/DirectionalLight")
camera_light = NodePath("Viewport/Pivot/Camera/DirectionalLight")
legend = NodePath("MarginContainer/HBoxContainer/LeftColumn/Legend")
gizmo_root = NodePath("Viewport/Gizmos")

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 899, 768 )
size_override_stretch = true
own_world = true
world = SubResource( 1 )
handle_input_locally = false
msaa = 2
usage = 3
render_target_update_mode = 3
physics_object_picking = true
script = ExtResource( 9 )

[node name="Pivot" type="Spatial" parent="ViewportContainer/Viewport"]
transform = Transform( 0.707107, -0.45452, 0.541675, 0, 0.766044, 0.642788, -0.707107, -0.454519, 0.541675, 0, 0, 0 )
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport/Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
far = 1500.0

[node name="DirectionalLight" type="DirectionalLight" parent="ViewportContainer/Viewport/Pivot/Camera"]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0 )
light_energy = 0.7
light_specular = 0.0

[node name="Lighting" type="Spatial" parent="ViewportContainer/Viewport"]

[node name="DirectionalLight" type="DirectionalLight" parent="ViewportContainer/Viewport/Lighting"]
transform = Transform( 0.446463, -0.751037, 0.48643, 0.446463, 0.658088, 0.606293, -0.775463, -0.0535144, 0.629122, 2.00127, 0, -1.33922 )
visible = false
light_energy = 0.7
light_specular = 0.0
directional_shadow_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="ViewportContainer/Viewport/Lighting"]
environment = ExtResource( 1 )

[node name="Input" type="Spatial" parent="ViewportContainer/Viewport"]

[node name="Output" type="Spatial" parent="ViewportContainer/Viewport"]

[node name="Gizmos" type="Spatial" parent="ViewportContainer/Viewport"]
script = ExtResource( 13 )
camera_node = NodePath("../Pivot/Camera")
viewport_node = NodePath("..")

[node name="MoveGizmo" parent="ViewportContainer/Viewport/Gizmos" instance=ExtResource( 12 )]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="ViewportContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 895.0
margin_bottom = 764.0

[node name="LeftColumn" type="VBoxContainer" parent="ViewportContainer/MarginContainer/HBoxContainer"]
margin_right = 441.0
margin_bottom = 760.0
size_flags_horizontal = 3
custom_constants/separation = 6

[node name="DisplayOptions" type="HBoxContainer" parent="ViewportContainer/MarginContainer/HBoxContainer/LeftColumn"]
margin_right = 143.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 7 )
min_size_y = true

[node name="Legend" parent="ViewportContainer/MarginContainer/HBoxContainer/LeftColumn/DisplayOptions" instance=ExtResource( 3 )]
margin_right = 24.0
margin_bottom = 29.0
toggle_mode = true
icon = ExtResource( 2 )

[node name="ResetCamera" parent="ViewportContainer/MarginContainer/HBoxContainer/LeftColumn/DisplayOptions" instance=ExtResource( 3 )]
margin_left = 32.0
margin_right = 56.0
margin_bottom = 29.0
icon = ExtResource( 10 )

[node name="VSeparator2" type="VSeparator" parent="ViewportContainer/MarginContainer/HBoxContainer/LeftColumn/DisplayOptions"]
margin_left = 64.0
margin_right = 79.0
margin_bottom = 29.0
custom_constants/separation = 15

[node name="LightSetup1" parent="ViewportContainer/MarginContainer/HBoxContainer/LeftColumn/DisplayOptions" instance=ExtResource( 3 )]
margin_left = 87.0
margin_right = 111.0
margin_bottom = 29.0
icon = ExtResource( 8 )

[node name="LightSetup2" parent="ViewportContainer/MarginContainer/HBoxContainer/LeftColumn/DisplayOptions" instance=ExtResource( 3 )]
margin_left = 119.0
margin_right = 143.0
margin_bottom = 29.0
icon = ExtResource( 4 )

[node name="Legend" type="PanelContainer" parent="ViewportContainer/MarginContainer/HBoxContainer/LeftColumn"]
visible = false
margin_top = 38.0
margin_right = 268.0
margin_bottom = 137.0
size_flags_horizontal = 0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="ViewportContainer/MarginContainer/HBoxContainer/LeftColumn/Legend"]
margin_left = 6.0
margin_top = 6.0
margin_right = 262.0
margin_bottom = 93.0
custom_constants/line_spacing = 6
text = "Middle Click: Orbit
Shift + Middle Click: Pan
Scroll Up / Down: Zoom"

[node name="RightColumn" type="VBoxContainer" parent="ViewportContainer/MarginContainer/HBoxContainer"]
margin_left = 449.0
margin_right = 891.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 2
[connection signal="node_selected" from="Tree" to="ViewportContainer" method="_on_node_selected"]
[connection signal="scene_updated" from="ViewportContainer" to="Tree" method="_update_tree"]
[connection signal="toggled" from="ViewportContainer/MarginContainer/HBoxContainer/LeftColumn/DisplayOptions/Legend" to="ViewportContainer" method="display_legend"]
[connection signal="pressed" from="ViewportContainer/MarginContainer/HBoxContainer/LeftColumn/DisplayOptions/ResetCamera" to="ViewportContainer/Viewport/Pivot" method="reset_camera"]
[connection signal="pressed" from="ViewportContainer/MarginContainer/HBoxContainer/LeftColumn/DisplayOptions/LightSetup1" to="ViewportContainer" method="enable_camera_light"]
[connection signal="pressed" from="ViewportContainer/MarginContainer/HBoxContainer/LeftColumn/DisplayOptions/LightSetup2" to="ViewportContainer" method="enable_static_light"]
